Make the project a little more independent.
Add in its Java 9 module specification.
Update the pom.xml to user Maven 4 (my maven is too old for the plugin
otherwise).